<resources>
    <string name="app_name">BanyeoMiji</string>
    <string name="app_title_kr">반려미지</string>
    <string name="app_package_name">com.twproject.banyeomiji</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_category_text_title">목록</string>
    <string name="fragmentSelectLocationText">보고싶은 지역을 선택해주세요!</string>
    <string name="dialog_loading_text">정보 불러오는중…</string>
    <string name="bottom_menu_list">목록</string>
    <string name="bottom_menu_map">지도</string>
    <string name="locationcheck">위치권한을 확인해 주세요</string>
    <string name="korea_gate">문예회관</string>
    <string name="korea_cafe">카페</string>
    <string name="korea_art_gallery">미술관</string>
    <string name="korea_pet_salon">미용</string>
    <string name="korea_museum">박물관</string>
    <string name="korea_dog_tools">반려동물용품</string>
    <string name="korea_restaurant">식당</string>
    <string name="korea_trip">여행지</string>
    <string name="korea_management">위탁관리</string>
    <string name="korea_swimming_pool">펜션</string>
    <string name="store_map_filter_category">목록</string>
    <string name="login">LOGIN</string>
    <string name="login_or">소셜 로그인</string>
    <string name="login_kr">로그인</string>
    <string name="email_hint_kr">이메일을 입력해주세요</string>
    <string name="password_hint_kr">패스워드를 입력해주세요</string>
    <string name="email_kr">이메일</string>
    <string name="password_kr">패스워드</string>
    <string name="sign_up_kr">회원가입</string>
    <string name="logout_kr">로그아웃</string>
    <string name="my_page_kr">마이 페이지</string>
    <string name="first_review_kr">첫 리뷰를 남겨주세요!</string>
    <string name="my_review_kr">마이 리뷰</string>
    <string name="btn_review_edit">작성</string>
    <string name="review_hint">제목</string>
    <string name="review_main">내용</string>
    <string name="my_review_gone">작성한 리뷰가 없습니다.</string>
    <string name="app_name_kr">반려 미지</string>
    <string name="location_list_no_data">목록이 없습니다</string>
    <string name="signup_kr">회원가입</string>
    <string name="nick_name_change_kr">닉네임 변경</string>
    <string name="nick_name_kr">닉네임</string>
    <string name="text_limit">최대 여덟글자</string>
    <string name="nick_name_change_btn_kr">변경</string>
    <string name="user_mypage_email_kr">대표 이메일</string>
    <string name="user_mypage_my_review_kr">내가 작성한 리뷰보기</string>
    <string name="location_list_review_btn_kr">리뷰보기</string>
    <string name="user_resign_kr">회원탈퇴</string>
    <string name="mypage_retry_kr">다시 시도해주세요...</string>
</resources>