<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true" >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layout01"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/store_map_filter_category"
            android:fontFamily="@font/bagelfat"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/layoutBtn01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="false"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:textSize="22sp"
            tools:ignore="ContentDescription" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layoutDetail01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/white"
        android:visibility="gone"
        app:strokeWidth="1dp"
        app:strokeColor="#aaa">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_korea_gate"
                android:text="@string/korea_gate"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cb_korea_cafe"
                android:text="@string/korea_cafe"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cb_korea_art_gallery"
                android:text="@string/korea_art_gallery"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_korea_pet_salon"
                android:text="@string/korea_pet_salon"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cb_korea_museum"
                android:text="@string/korea_museum"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cb_korea_dog_tools"
                android:text="@string/korea_dog_tools"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_korea_restaurant"
                android:text="@string/korea_restaurant"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cb_korea_trip"
                android:text="@string/korea_trip"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cb_korea_management"
                android:text="@string/korea_management"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_korea_swimming_pool"
                android:text="@string/korea_swimming_pool"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>