<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.FragmentLogin">


    <TextView
        android:id="@+id/text_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/bagelfat"
        android:text="@string/login_kr"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bagelfat"
        android:hint="@string/email_hint_kr"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login_title"
        android:autofillHints="no"
         />

    <TextView
        android:id="@+id/subtext_login_email"
        android:text="@string/email_kr"
        android:fontFamily="@font/bagelfat"
        android:textSize="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="@id/edit_login_email"
        app:layout_constraintBottom_toTopOf="@id/edit_login_email"/>

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bagelfat"
        android:hint="@string/password_hint_kr"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="42dp"
        android:autofillHints="no"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_login_email" />

    <TextView
        android:id="@+id/subtext_login_password"
        android:text="@string/password_kr"
        android:fontFamily="@font/bagelfat"
        android:textSize="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="@id/edit_login_password"
        app:layout_constraintBottom_toTopOf="@id/edit_login_password"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_up_kr"
        android:fontFamily="@font/bagelfat"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_login_email"
        app:layout_constraintTop_toBottomOf="@id/edit_login_password"/>

    <Button
        android:id="@+id/btn_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/login_kr"
        android:fontFamily="@font/bagelfat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_login_password"/>

    <TextView
        android:id="@+id/text_login_ortitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bagelfat"
        android:text="@string/login_or"
        android:layout_marginTop="48dp"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_email"/>

    <LinearLayout
        android:id="@+id/linear_login_orbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login_ortitle">

        <ImageButton
            android:id="@+id/btn_login_google"
            android:src="@drawable/btn_google_login"
            android:scaleType="centerCrop"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="56dp"
            android:layout_height="56dp" />

        <ImageButton
            android:id="@+id/btn_login_naver"
            android:layout_width="56dp"
            android:layout_height="56dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_check_current"
        android:text="Check Current User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_login_orbtn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_sign_up"
        android:textSize="18dp"
        android:text="회원가입"
        android:fontFamily="@font/bagelfat"
        android:layout_width="90dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>