<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.login.FragmentMyPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="32dp"
        app:layout_constraintVertical_weight="42"
        app:layout_constraintBottom_toTopOf="@+id/Linearlayout_logout"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/btn_extend_change_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/bagelfat"
            android:text="@string/nick_name_change_kr"
            android:textColor="@color/default_btn_text_color"
            app:layout_constraintBottom_toTopOf="@id/linear_my_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_my_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:animateLayoutChanges="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:elevation="8dp"
                android:background="@drawable/fragment_my_page_frame_background" >

                <TextView
                    android:id="@+id/text_hint_nick_name"
                    android:textSize="18dp"
                    android:fontFamily="@font/bagelfat"
                    android:text="@string/nick_name_kr"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/text_nick_name"
                    android:textSize="18dp"
                    android:fontFamily="@font/bagelfat"
                    android:text="@string/mypage_retry_kr"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="SpUsage" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_change_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                android:background="@drawable/fragment_my_page_frame_background"
                android:elevation="8dp" >

                <EditText
                    android:id="@+id/edit_nick_name"
                    android:textSize="18dp"
                    android:fontFamily="@font/bagelfat"
                    android:hint="@string/text_limit"
                    android:importantForAutofill="no"
                    android:maxLength="8"
                    android:inputType="textFilter"
                    android:layout_marginStart="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="SpUsage" />

                <Button
                    android:id="@+id/btn_change_nickname"
                    android:text="@string/nick_name_change_btn_kr"
                    android:fontFamily="@font/bagelfat"
                    android:textColor="@color/default_btn_text_color"
                    android:layout_marginEnd="8dp"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end|center" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:elevation="8dp"
                android:weightSum="3"
                android:background="@drawable/fragment_my_page_frame_background"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/text_hint_email"
                    android:textSize="18dp"
                    android:fontFamily="@font/bagelfat"
                    android:text="@string/user_mypage_email_kr"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/text_email"
                    android:textSize="18dp"
                    android:fontFamily="@font/bagelfat"
                    android:layout_weight="2"
                    android:text="@string/mypage_retry_kr"
                    android:layout_gravity="end"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="SpUsage" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frame_my_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:elevation="8dp"
                android:background="@drawable/fragment_my_page_frame_background" >

                <TextView
                    android:id="@+id/text_my_review"
                    android:textSize="18dp"
                    android:fontFamily="@font/bagelfat"
                    android:text="@string/user_mypage_my_review_kr"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="SpUsage" />
            </FrameLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/Linearlayout_logout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/btn_logout_google"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/default_btn_text_color"
            android:fontFamily="@font/bagelfat"
            android:text="@string/logout_kr"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_user_resign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bagelfat"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/user_resign_kr"
            android:layout_gravity="end|center"
            android:textColor="@color/default_btn_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>