<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".view.main.FragmentReview">

    <ImageButton
        android:id="@+id/btn_extend_edit_review"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:fontFamily="@font/bagelfat"
        android:src="@drawable/icon_pen"
        android:background="@drawable/fragment_review_extend_edit_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linear_review_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <EditText
            android:id="@+id/edit_review_title"
            android:hint="@string/review_hint"
            android:textSize="28dp"
            android:maxLines="1"
            android:maxLength="19"
            android:layout_marginBottom="4dp"
            android:inputType="text"
            tools:text="제목입니다"
            android:textStyle="bold"
            android:fontFamily="@font/singledayregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,SpUsage" />

        <EditText
            android:id="@+id/edit_review"
            android:hint="@string/review_main"
            android:textSize="24sp"
            android:padding="4dp"
            android:background="@drawable/fragment_review_review_bord"
            android:fontFamily="@font/singledayregular"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:lines="9"
            android:maxLines="9"
            android:maxLength="300"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RatingBar
                android:id="@+id/rating_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:layout_gravity="center_vertical"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:progressTint="@android:color/holo_blue_light"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1" />

            <Button
                android:id="@+id/btn_review_upload"
                android:text="@string/btn_review_edit"
                android:fontFamily="@font/bagelfat"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>
        </FrameLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_review_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_review_edit"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_review_gone"
        android:text="@string/first_review_kr"
        android:fontFamily="@font/bagelfat"
        android:gravity="center"
        android:visibility="gone"
        android:animateLayoutChanges="false"
        android:textSize="36dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>